@@ -5,6 +5,7 @@ o Support output of temperature sampling period to ipmi-dcmi.
 o Clarify error message when SOL session cannot be stolen in
   ipmiconsole/libipmiconsole.
 o Fix dcmi rolling average time period output error
+o Fix ipmi-dcmi output errors with --get-dcmi-sensor-info.
 o Fix Intel OEM SEL buffer overflow.
 o Fix out of trunk source build.
 
